# SagaGameLearning

./: CMakeLists.txt
Saga/: CMakeLists.txt
Saga/include/framework/: Application.h
Saga/src/: main.cpp
Saga/src/framework/: Application.cpp
SagaEngine/: CMakeLists.txt
SagaEngine/include/: EntryPoint.h
SagaEngine/include/framework/: Actor.h  Application.h  AssetManager.h  Core.h  Object.h  PhysicsSystem.h  World.h
SagaEngine/src/: EntryPoint.cpp
SagaEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  Object.cpp  PhysicsSystem.cpp  World.cpp
SagaGame/: CMakeLists.txt  config.h.in
SagaGame/include/: config.h
SagaGame/include/components/: HealthComponent.h  ShipStatsComponent.h
SagaGame/include/enemies/: EnemyShip.h
SagaGame/include/gameFramework/: GameApplication.h
SagaGame/include/player/: PlayerShip.h
SagaGame/include/ship/: Ship.h
SagaGame/include/weapon/: KineticProjectile.h  KineticWeapon.h  Projectile.h  SpreadShotWeapon.h  Weapon.h
SagaGame/src/components/: HealthComponent.cpp  ShipStatsComponent.cpp
SagaGame/src/enemies/: EnemyShip.cpp
SagaGame/src/gameFramework/: GameApplication.cpp
SagaGame/src/player/: PlayerShip.cpp
SagaGame/src/ship/: Ship.cpp
SagaGame/src/weapon/: KineticProjectile.cpp  KineticWeapon.cpp  Projectile.cpp  SpreadShotWeapon.cpp  Weapon.cpp
